--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "frisby": "^2.1.3",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.19"
   }
 }
